# ogip

./: .gitattributes  .gitignore  Justfile  LICENSE  Makefile  README.md  pyproject.toml
.ai/: AGENTS.md  AI-glossary.en.md  AI-glossary.ru.md  CLAUDE.md  FIXME.md  PLAN.md  README.md  SKILLS.md  STATUS.md  TODO.md
.ai/tasks/: README.md  agentic-monitoring.md  airbyte-evaluation-lane.md  alerting.md  dagster-setup.md  dbt-packages.md  m0-walking-skeleton.md  ml-tasks-and-prefect-per-engine-setups.md  obs-wiring-handoff.md  odos-orchestration-spec.md  phase-0-scaffold.md  python-task-integration.md  r2-vps-finalize.md  s3-object-storage.md  scraping-resilient.md  session-coordination.md  sources-backlog.md  spec-compact-header.md  spec-macros.md  spec-semantic-layer.md  transform-engine-generators.md  vps-deploy-tooling.md
.ci/: README.md  run.sh
.ci/steps/: _common.sh  bash-lint.sh  commit-binding.sh  e2e.sh  lfs-guard.sh  lint.sh  secret-scan.sh  sql-lint.sh  structure-validate.sh  test.sh  typecheck.sh
.claude/: settings.json
.claude/agents/: ogip-ingestion-engineer.md  ogip-lane-worker.md  ogip-obs-engineer.md
.github/workflows/: ci.yml  dagster-e2e.yml
.tmp/: Justfile  README.md
config/: .env-render.py  .pre-commit-config.yaml  .yamllint.yaml  README.md  config.yml
deploy/: README.md  docker-compose.yml
deploy/obs/: README.md  docker-compose.obs.yml
deploy/vps/: README.md  check-secrets.sh  deploy.sh  hetzner.sh  lib.sh  provision.sh  remote.sh  smoke.sh  status.sh
docs/: CHANGELOG.md  OPEN-QUESTIONS.md  README.md  ROADMAP.md
docs/adr/: ADR-0001-edw-layering-no-medallion.md  ADR-0002-duckdb-analytical-engine.md  ADR-0003-parquet-lake-defer-iceberg-ducklake.md  ADR-0004-sqlmesh-default-transform-engine.md  ADR-0005-spec-ssot-bruin-odcs-compiler.md  ADR-0006-dlt-default-ingestion-postgres-landing.md  ADR-0007-prefect-orchestration.md  ADR-0008-postgresql-roles.md  ADR-0009-ml-outputs-feature-store.md  ADR-0010-activity-model-layer.md  ADR-0011-minimal-secrets.md  ADR-0012-github-ci-manual-vps-deploy.md  ADR-0013-github-issues-projects-tasks.md  ADR-0014-resilient-scraping-concurrency.md  ADR-0015-dagster-alt-orchestration-dg-components.md  ADR-0016-odts-authoring-format-spec-sql.md  ADR-0016-orchestrator-transform-dq-boundary.md  ADR-0017-odos-normative-profile.md  ADR-0017-orchestrator-transform-dq-boundary.md  ADR-0018-odts-normative-profile.md  ADR-0019-odts-dq-projection-and-seven-prefect-subprojects.md  README.md  _template.md
docs/architecture/: README.md  observability.md  overview.md  storage.md
docs/comparisons/: dagster-odp-vs-spec-compiler.md  github_repos-ingestion-dlt-vs-airbyte-vs-custom.md  ots-vs-odts.md  scraping-candidates-after-registry-exhausted.md
docs/runbooks/: README.md  _template.md  deploy-vps.md  local-dev.md  pipeline-failure.md  run-dagster.md  run-pipeline.md
docs/techdebt/: airbyte-lane.md
dq/: README.md  run.py
experimental/orchestration/dagster_ogip/: .gitignore  .mcp.json  README.md  pyproject.toml
experimental/orchestration/dagster_ogip/.dg/: telemetry.yaml
experimental/orchestration/dagster_ogip/cdc/: README.md  ingestr_cdc.sh
experimental/orchestration/dagster_ogip/deploy/dev/: dagster.yaml
experimental/orchestration/dagster_ogip/deploy/dev/history/: runs.db
experimental/orchestration/dagster_ogip/deploy/dev/history/runs/: index.db
experimental/orchestration/dagster_ogip/deploy/dev/schedules/: schedules.db
experimental/orchestration/dagster_ogip/deploy/prod/: dagster.yaml
experimental/orchestration/dagster_ogip/e2e/: run_combo.sh
experimental/orchestration/dagster_ogip/jobs/: dbt-env.sh  dg-tasks.sh
experimental/orchestration/dagster_ogip/src/dagster_ogip/_lib/: orchestration.py
experimental/orchestration/dagster_ogip/src/dagster_ogip/defs/cdc_ingest/: definitions.py
experimental/orchestration/dagster_ogip/src/dagster_ogip/defs/dbt_ingest/: defs.yaml
experimental/orchestration/dagster_ogip/src/dagster_ogip/defs/dlt_ingest/: defs.yaml  loads.py
experimental/orchestration/dagster_ogip/src/dagster_ogip/defs/orchestration/: definitions.py  ingestion.py  integrations.py  monitoring.py
experimental/orchestration/dagster_ogip/src/dagster_ogip/defs/orchestration/ingestion/: definitions.py
experimental/orchestration/dagster_ogip/src/dagster_ogip/defs/orchestration/integrations/: definitions.py
experimental/orchestration/dagster_ogip/src/dagster_ogip/defs/orchestration/maintenance/: definitions.py
experimental/orchestration/dagster_ogip/src/dagster_ogip/defs/orchestration/snapshots/: definitions.py
experimental/orchestration/dagster_ogip/src/dagster_ogip/defs/orchestration/warehouse/: definitions.py  jobs.py  schedules.py  sensors.py
experimental/orchestration/dagster_ogip/tests/: test_e2e_combo.py
experimental/python_tasks/: README.md  __init__.py  pipeline.py  tasks.py
ingestion/: README.md
ingestion/base/: base_source.py  scraper_source.py
ingestion/common/: __init__.py  http.py
ingestion/samples/: README.md  metacritic_game.html  opencritic_game.html  psn_concept.html  rawg_games.json  steamcharts_app.html
ingestion/sources/: metacritic.py  opencritic.py  psn.py  rawg.py  steamcharts.py
integrations/github/: tasks_sync.py
notebooks/: 01_explore_datasets.ipynb
pipelines/: README.md  alerting_hooks.py
pipelines/_shared/: __init__.py  alerting.py  engines.py  paths.py  steps.py
pipelines/bruin/: flow.py  prefect.yaml
pipelines/dagster/: flow.py  prefect.yaml
pipelines/dbt/: flow.py  prefect.yaml
pipelines/flows/: _common.py  (+2 more)
spec/: README.md
transform/: README.md  engines.py  runner.py
(+222 files in other folders)
