[project]
name = "dagster_ogip"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.13.14",
    "dagster-dbt>=0.29.14",
    "dagster-dlt>=0.29.14",
    "dagster-postgres>=0.29.14",
    "dbt-duckdb>=1.10.1",
    "ingestr>=1.1.1",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_ogip"
registry_modules = [
    "dagster_ogip.components.*",
]


